# Syllabus_001

./: README.md
CSyllabusV110/: CMakeLists.txt  csyllabus100_sw_KE.ts  qml.qrc
CSyllabusV110/forms/fonts/: fontello-codes.css
CSyllabusV110/forms/images/: slavery.jfif
CSyllabusV110/forms/imports/: registration.js  syComponentsScripts.js  syConstantScripts.js  syConstants.js
CSyllabusV110/forms/qml/: CoursesSelection.qml  HomeItem.qml  HomeNav.qml  HomePage.qml  LoginForm.qml  LoginItem.qml  LoginPage.qml  RegisterForm.qml  SignupOptions.qml  StudiesSelection.qml  VideosPage.qml  main.qml
CSyllabusV110/forms/qml/CSyllabusV110/: Constants.qml
CSyllabusV110/forms/qml/components/: SyBusy.qml  SyButton.qml  SyComboBox.qml  SyCoursesSelection.qml  SyHistorySwipeView.qml  SyHomeForm.qml  SyInnerBackground.qml  SyLoginForm.qml  SyNavBar.qml  SyPosterDetails.qml  SyRead.qml  SyRegisterForm.qml  SyStudiesSelection.qml  SyTextField.qml  SyTopNav.qml
CSyllabusV110/forms/qml/components/syControls/: SyBusy.qml  SyButton.qml  SyComboBox.qml  SyCopyRightMsg.qml  SyCoursesSyllabus.qml  SyHeader.qml  SyHomeTab.qml  SyNavBar.qml  SyPoster.qml  SyPosterListView.qml  SyPosterPublishing.qml  SySubjectsModules.qml  SyTextField.qml  SyTopCollectionsPane.qml  SyTopNav.qml  SyVideoItemDelegate.qml
CSyllabusV110/include/: SyApp.h  User.h
CSyllabusV110/src/: SyApp.cpp
QT5csyllabus/: HomeItem.qml  HomePage.qml  LoginForm.qml  QT5csyllabus.qml  QT5csyllabus.qmlproject  QT5csyllabus.qmlproject.qtds  Screen01.ui.qml  forms.qrc
QT5csyllabus/components/syControls/: SyCopyRightMsg.qml  SyCoursesSyllabus.qml  SyHeader.qml  SyHomeTab.qml  SyNavBar.qml  SyPoster.qml  SyPosterDetails.qml  SyPosterListView.qml  SySubjectsModules.qml  SyTextField.qml  SyTopCollectionsPane.qml  SyTopNav.qml
QT5csyllabus/images/: loginImage.jfif
QT5csyllabus/imports/: SyComponentsScripts.js  syConstantsScript.js
QT5csyllabus/imports/QT5csyllabus/: Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  EventListSimulator.qml
QT5csyllabus/imports/QT5csyllabus/designer/: plugin.metainfo
SyllabusWebSampleData/: faculties.xml  universities.xml  universities_data.py
csyllabus100/: csyllabus100_sw_KE.ts  main.cpp  qml.qrc
csyllabus100/forms/imports/: registration.js
csyllabus100/forms/qml/: GuiConstants.qml  SyBusy.qml  SyButton.qml  SyCircleProgress.qml  SyIcon.qml  SyInnerBackground.qml  SyText.qml  SyTextField.qml  main.qml
csyllabus100/forms/qml/register/: LoginForm.qml  Register.qml  RegisterForm.qml  SignupOptions.qml  StudiesSelection.qml
csyllabus100/include/: SyApp.h
csyllabus100/src/: SyApp.cpp  User.cpp  main.cpp
makomi/: CMakeLists.txt  makomi_fr_BE.ts  qml.qrc
makomi/forms/fonts/: fonts.qrc
makomi/forms/qml/: Constants.qml  DirectoryFontFolder.qml  NavBar.qml  Navigation.qml  SideNavDrawer.qml  main.qml
makomi/forms/qml/components/: ActionButton.qml  BookHorizontalList.qml  CopyRightLabel.qml  DivisorLine.qml  FavoriteDrawer.qml  FavoriteSyllabus.qml  QuotePanel.qml  QuotesFlipableRepeater.qml  ResumeReading.qml  RoundImage.qml  SubjectModules.qml  Syllabus.qml  SyllabusFilter.qml  SyllabusGrid.qml
makomi/forms/qml/controls/: SearchBox.qml  SearchFilter.qml  SearchTextField.qml
makomi/forms/qml/models/: QuotesModel.qml  SideNavListModel.qml  YearStudyModel.qml
makomi/forms/qml/pages/: AccountPage.qml  ChangePasswordPage.qml  CoursesSelectionPage.qml  EditAccountPage.qml  FavoritesPage.qml  HomePage.qml  LoginPage.qml  QuotesPage.qml  ReadingPage.qml  SearchResultsPage.qml  SubjectsPage.qml  SyllabusDetailsPage.qml
makomi/forms/scripts/: script.qrc  scripts.js
makomi/include/: PdfView.h
makomi/res/: res.qrc
makomi/src/: main.cpp
sy_quick_controls/: CMakeLists.txt  qml.qrc  resImages.qrc  sy_quick_controls_fr_BE.ts
sy_quick_controls/forms/fonts/: fontello-codes.css
sy_quick_controls/forms/imports/: SyConstantScripts.js  syComponentsScripts.js
sy_quick_controls/forms/imports/Syllabus10/: Constants.qml  DirectoryFontFolder.qml
sy_quick_controls/forms/qml/: SyCalendar.qml  SyHomePage.qml  SyLoginPage.qml  SyRegisterPage.qml  main.qml
sy_quick_controls/forms/qml/syComponents/: SyAddEvents.qml  SyCopyRightMsg.qml  SyCourseSelection.qml  SyCoursesSyllabus.qml  SyEvents.qml  SyHomeForm.qml  SyLoginForm.qml  SyParentsMailInput.qml  SyPosterDetails.qml  SyProfile.qml  SyReading.qml  SyStudiesSelection.qml  SySubjectModules.qml  SyTimeTableList.qml  SyTopPicks.qml
sy_quick_controls/forms/qml/syControls/: SyButton.qml  SyColorPicker.qml  SyComboBox.qml  SyHeader.qml  SyHeaderLogo.qml  SyInnerBackground.qml  SyPoster.qml  SyPosterListView.qml  SyTextField.qml  SyTimePicker.qml
sy_quick_controls/include/: SyApp.h  SyHighlighter.h  SySchedule.h  User.h  pch.h
sy_quick_controls/src/: SyApp.cpp  SyHighlighter.cpp  SySchedule.cpp  User.cpp  main.cpp
syllabusQMLGUI/: qml.qrc  syllabusQMLGUI.pro
syllabusQMLGUI/forms/imports/: registration.js
syllabusQMLGUI/forms/qml/: GuiConstants.qml  SyButton.qml  SyInnerBackground.qml  SyPasswordField.qml  SyTextField.qml  main.qml
syllabusQMLGUI/forms/qml/models/: AvailableUniversityModel.qml
syllabusQMLGUI/forms/qml/register/: LoginForm.qml  Register.qml  RegisterForm.qml  SignupOptions.qml  StudiesSelection.qml
syllabusQMLGUI/src/: main.cpp
